# rust-note

./: .gitignore  Cargo.toml  README.md  justfile
00-cargo/: README.md
00-clitool/: book.toml  justfile
00-clitool/src/: SUMMARY.md  mdbook.md
00-clitool/src/mdbook/: basic.md  summary.md
01-language/: README.md
01-language/ch01/src/: m05_control_flow.rs
01-language/ch02/src/: lib.rs  m01_ownership.rs  m02_reference.rs
01-language/ch03/: Cargo.toml
01-language/ch03/src/: lib.rs  m01_struct.rs
01-language/ch04/: Cargo.toml
01-language/ch04/src/: lib.rs
01-language/ch05/: Cargo.toml
01-language/ch05/src/: lib.rs
01-language/ch06/: Cargo.toml
01-language/ch06/src/: m01_vector.rs  m02_hash_map.rs
01-language/ch07/src/: lib.rs
01-language/ch08/src/: m04_deconstruction.rs
01-language/ch09/src/: 00.c  lib.rs  m03_struct.rs
01-language/ch10/: Cargo.toml
01-language/ch10/src/: lib.rs
01-language/ch11/: Cargo.toml
01-language/ch12/: Cargo.toml
01-language/ch14/: Cargo.toml
01-language/ch16/: Cargo.toml
01-language/ch16/src/: lib.rs  m02_mpsc.rs
01-language/ch17/: Cargo.toml
01-language/ch19/: oop_2.cc
01-language/ch21/: Cargo.toml  foo.txt
01-language/ch23/: Cargo.toml
01-language/ch24/: Cargo.toml
01-language/ch25/: Cargo.toml
01-language/rust-2024/: Cargo.toml
01-ui/bevy-examples/: Cargo.toml
01-ui/egui-examples/: Cargo.toml  flake.nix
01-ui/egui-examples/src/: context.rs  counter.rs  custom_widget.rs  fonts.rs  layout.rs  lib.rs  main.rs  painter.rs  style.rs  toggle_button.rs  widgets.rs  window_frame.rs
01-ui/guibook/: book.toml
02-thread/native/: book.toml
02-tokio/my-redis/: Cargo.toml  foo.txt
02-tokio/my-redis/examples/: hello-redis.rs  server-db.rs
02-tokio/my-redis/src/: main.rs
03-clap/ch01-derive/: Cargo.toml  justfile
04-some/crates01-colored/: Cargo.toml
05-egui/eguitest/: Cargo.toml
05-egui/neumorphism/: Cargo.toml  index.html  justfile  trunk.toml
05-egui/neumorphism/src/: app.rs  lib.rs  main.rs
05-egui/neumorphism/src/widget/: mod.rs
05-egui/web_demo/: Cargo.toml  index.html
05-egui/web_demo/src/: main.rs
06-bevy_ecs/bevy_model/: Cargo.toml  justfile  readme.md
06-bevy_ecs/bevy_mpsc/: Cargo.toml
06-bevy_ecs/cases/: Cargo.toml  README.md
06-bevy_ecs/model/: Cargo.toml
architecture/mvc-mvvm/: Cargo.toml
demo_project/httpie/: Cargo.toml  README.md
demo_project/httpie/src/: main.rs  opts.rs  tests.rs
demo_project/scrape_url/: Cargo.toml  README.md
demo_project/singleton_demo/: .gitignore  icon.svg.import  project.godot  singleton.gd  singleton.gd.uid
docs/: advance.md  basic.md
language/: Cargo.toml  README.md  justfile
language/ch00/: README.md
language/ch01/: Cargo.toml
language/ch01/src/: lib.rs  (+6 more)
language/ch02/: Cargo.toml
language/ch07/: Cargo.toml
language/ch08/: Cargo.toml
language/ch09/: Cargo.toml
language/ch13/: Cargo.toml
language/ch15/: Cargo.toml
language/ch16/: Cargo.toml
language/ch18/: Cargo.toml
language/ch19/: Cargo.toml  oop_1.cc
language/ch20/: Cargo.toml
language/src/: ch08.rs  ch09.rs  ch13.rs  ch18.rs  ch19.rs  template
leptos-tutorial/: Trunk.toml  index.html
leptos-tutorial/src/: ch01.rs  ch02.rs  ch03.rs  main.rs
src/: lib.rs
src/advance/: mod.rs
src/ch02/: mod.rs
src/ch03/: mod.rs
src/ch04/: mod.rs
src/ch05/: mod.rs
src/ch06/: mod.rs
src/ch07/: mod.rs
src/ch08/: mod.rs
src/ch09/: mod.rs
src/ch10/: mod.rs
src/ch11/: mod.rs
src/ch12/: mod.rs
src/ecs/: bevy_case.rs  mod.rs
src/language/: ch01.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  ch08.rs  ch10.rs  ch11.rs  ch12.rs  ch14.rs  ch15.rs  ch18.rs  ch19.rs  ch20.rs  ch21.rs  mod.rs
src/leetcode/: mod.rs  q0001.rs  q0002.rs  q0007.rs  q1.rs
src/lists/: ch01.rs  ch02.rs  mod.rs
(+156 files in other folders)
