[package]
name = "my-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
mini-redis = "0.4.1"
tokio = { version = "1.46.1", features = ["full"] }

[[bin]]
name = "first"
path = "bin/first.rs"

[[bin]]
name = "job"
path = "bin/job.rs"

[[example]]
name = "hello-redis"
path = "examples/hello-redis.rs"
