[package]
name = "neumorphism"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
  "persistence",
  "wayland"
] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2
