[package]
name = "web_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1" }
bevy_egui = "0.35.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
opt-level = 2
