[package]
name = "httpie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98" # 错误处理
clap = { version = "4.5.32", features = ["derive", "unstable-doc"] }
colored = "3.0.0" # 终端多彩显示
jsonxf = "1.1.1" # JSON pretty print 格式化
mime = "0.3.17" # 处理mime类型
reqwest = { version = "0.12.22", features = ["json"] } # HTTP客户端
tokio = { version = "1.46.1", features = ["full"] } # 异步运行时库

[[bin]]
name = "first"
path = "bin/first.rs"
